--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.3.0",
     "aos": "^2.3.4",
+    "basic-ftp": "^5.0.5",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
     "fennecholding": "file:",
+    "formidable": "^3.5.2",
     "framer-motion": "^12.0.6",
     "next": "14.2.17",
     "next-auth": "^4.24.11",
