--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prisma": "prisma generate",
     "dev": "next dev",
-    "build": " next build",
+    "build": " next build && prisma generate",
     "start": "node server.js",
     "lint": "next lint"
   },
