--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.17",
     "next-auth": "^4.24.11",
     "next-intl": "^4.0.2",
+    "next-sitemap": "^4.2.3",
     "prisma": "^6.2.1",
     "react": "^18",
     "react-countup": "^6.5.3",
